--- a/src/code/Project/Pasantes.Website/packages.config
+++ b/src/code/Project/Pasantes.Website/packages.config
@@ -7,7 +7,7 @@
   <package id="Azure.Storage.Common" version="12.3.0" targetFramework="net48" />
   <package id="Azure.Storage.Files.Shares" version="12.2.0" targetFramework="net48" />
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net48" />
-  <package id="Castle.Core" version="4.2.1" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
   <package id="chilkat-x64" version="9.5.0.89" targetFramework="net48" />
   <package id="CommonServiceLocator" version="2.0.3" targetFramework="net48" />
   <package id="Configy" version="1.0.0" targetFramework="net48" />
@@ -38,6 +38,10 @@
   <package id="Glass.Mapper.Sc.100.Core" version="5.8.170" targetFramework="net48" />
   <package id="Glass.Mapper.Sc.100.Mvc" version="5.8.170" targetFramework="net48" />
   <package id="Glass.Mapper.Sc.100.WebForms" version="5.8.170" targetFramework="net48" />
+  <package id="Glass.Mapper.Sc.103" version="5.8.181" targetFramework="net48" />
+  <package id="Glass.Mapper.Sc.103.Core" version="5.8.181" targetFramework="net48" />
+  <package id="Glass.Mapper.Sc.103.Mvc" version="5.8.181" targetFramework="net48" />
+  <package id="Glass.Mapper.Sc.103.WebForms" version="5.8.181" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net48" />
   <package id="GreenDonut" version="10.5.5" targetFramework="net48" />
   <package id="HotChocolate" version="10.5.5" targetFramework="net48" />
@@ -111,7 +115,7 @@
   <package id="Microsoft.Extensions.Configuration.Ini" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Json" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Xml" version="2.2.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyModel" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DiagnosticAdapter" version="2.1.0" targetFramework="net48" />
