--- a/src/serialization/templates/User Defined/My Account/My Account Data/Name.yml
+++ b/src/serialization/templates/User Defined/My Account/My Account Data/Name.yml
@@ -1,8 +1,15 @@
 ﻿---
-ID: "589547e1-7878-4c17-a55e-0c7a046964cb"
-Parent: "66ee465a-3434-455e-88c4-bc5d987c75ec"
-Template: "e269fbb5-3750-427a-9149-7aa950b49301"
-Path: /sitecore/templates/User Defined/Page/Sample
+ID: "5557e425-4efc-4e90-b84a-de516e1e6c8f"
+Parent: "e7d08f2a-8682-46e6-a35a-ff9838d870e1"
+Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
+Path: /sitecore/templates/User Defined/My Account/My Account Data/Name
+SharedFields:
+- ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
+  Hint: Type
+  Value: "Single-Line Text"
+- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
+  Hint: __Sortorder
+  Value: 100
 Languages:
 - Language: en
   Versions:
@@ -10,7 +17,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20230411T020314Z
+      Value: 20230419T020007Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -21,11 +28,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "ddebbf34-0c6e-406d-bf17-aeb5ec6a8171"
+      Value: "94c7d0f5-5e8a-41e8-8be8-95415ab0e1c5"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230411T020314Z
+      Value: 20230419T020007Z
