--- a/src/serialization/renderings/User Defined/Title And Text GM.yml
+++ b/src/serialization/renderings/User Defined/Title And Text GM.yml
@@ -4,6 +4,12 @@ Parent: "22cc8e86-fcca-41b4-816f-a9048497f562"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/User Defined/Title And Text GM
 SharedFields:
+- ID: "1a7c85e5-dc0b-490d-9187-bb1dbcb4c72f"
+  Hint: Datasource Template
+  Value: /sitecore/templates/User Defined/Components/Title And Text
+- ID: "b5b27af1-25ef-405c-87ce-369b3a004016"
+  Hint: Datasource Location
+  Value: /sitecore/content/Data/Title And Text
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
   Value: TitleAndTextGlassMapper
@@ -28,11 +34,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "2c5ded3f-9718-4410-984d-6d5d1fd80aea"
+      Value: "7d547f1c-ff80-4cd1-9d2b-8f014d8296a0"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230414T020240Z
+      Value: 20230419T132407Z
