--- a/src/serialization/renderings/User Defined/Title And Text.yml
+++ b/src/serialization/renderings/User Defined/Title And Text.yml
@@ -4,12 +4,18 @@ Parent: "22cc8e86-fcca-41b4-816f-a9048497f562"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/User Defined/Title And Text
 SharedFields:
+- ID: "1a7c85e5-dc0b-490d-9187-bb1dbcb4c72f"
+  Hint: Datasource Template
+  Value: /sitecore/templates/User Defined/Components/Title And Text
 - ID: "3d08db46-2267-41b0-bc52-be69fd618633"
   Hint: Cacheable
   Value: 1
 - ID: "8b6d532b-6128-4486-a044-ca06d90948ba"
   Hint: VaryByData
   Value: 1
+- ID: "b5b27af1-25ef-405c-87ce-369b3a004016"
+  Hint: Datasource Location
+  Value: /sitecore/content/Data/Title And Text
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
   Value: TitleAndText
@@ -34,11 +40,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "50d0a3b9-5bb0-4a9c-97fe-83e66ba1193e"
+      Value: "b6859f6a-0b8c-4427-8a8b-6084f054cf98"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230414T022729Z
+      Value: 20230419T015006Z
