--- a/src/serialization/content/Pasantes/Data/Student.yml
+++ b/src/serialization/content/Pasantes/Data/Student.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "9adf0727-fab2-41fe-ac38-b203c2ac2112"
+ID: "edac90d2-36ea-4976-bbc5-8d7a5ccd92c1"
 Parent: "86b24852-b71b-449e-b06d-5df9105032b0"
-Template: "f5fddc7e-c6b0-468b-b329-cacd62da54ac"
-Path: /sitecore/content/Data/Title And Text
+Template: "a87a00b1-e6db-45ab-8b54-636fec3b5523"
+Path: /sitecore/content/Pasantes/Data/Student
 Languages:
 - Language: en
   Versions:
@@ -10,7 +10,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20230419T014806Z
+      Value: 20230419T014817Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -21,11 +21,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "8818c93f-2f01-4abb-8bb0-213a41b7331b"
+      Value: "cd5085ec-bcae-4d28-9165-663f5376149d"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230419T020316Z
+      Value: 20230419T014817Z
