--- a/src/serialization/content/Pasantes/Home/My Account.yml
+++ b/src/serialization/content/Pasantes/Home/My Account.yml
@@ -1,8 +1,12 @@
 ﻿---
-ID: "edac90d2-36ea-4976-bbc5-8d7a5ccd92c1"
-Parent: "86b24852-b71b-449e-b06d-5df9105032b0"
-Template: "a87a00b1-e6db-45ab-8b54-636fec3b5523"
-Path: /sitecore/content/Data/Student
+ID: "b9536332-c0da-4be9-8578-27b676c41fd3"
+Parent: "1a3575cf-215a-4204-8c75-8b56026a6558"
+Template: "75cee24d-ee7d-44b6-b580-c7de0464a9bf"
+Path: /sitecore/content/Pasantes/Home/My Account
+SharedFields:
+- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
+  Hint: __Sortorder
+  Value: 200
 Languages:
 - Language: en
   Versions:
@@ -10,7 +14,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20230419T014817Z
+      Value: 20230419T015654Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -21,11 +25,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "cd5085ec-bcae-4d28-9165-663f5376149d"
+      Value: "5f05027f-3420-45c6-a504-03ad841096f1"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230419T014817Z
+      Value: 20230421T014421Z
