--- a/src/serialization/templates/User Defined/Home.yml
+++ b/src/serialization/templates/User Defined/Home.yml
@@ -1,8 +1,17 @@
 ﻿---
-ID: "b9536332-c0da-4be9-8578-27b676c41fd3"
-Parent: "110d559f-dea5-42ea-9c1c-8a5df7e70ef9"
-Template: "75cee24d-ee7d-44b6-b580-c7de0464a9bf"
-Path: /sitecore/content/Home/My Account
+ID: "201fb180-d7fe-46f3-852d-8fac12aa3e3c"
+Parent: "b29ee504-861c-492f-95a3-0d890b6fca09"
+Template: "ab86861a-6030-46c5-b394-e8f99e8b87db"
+Path: /sitecore/templates/User Defined/Home
+SharedFields:
+- ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
+  Hint: __Icon
+  Value: Apps/32x32/Books.png
+- ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116"
+  Hint: __Base template
+  Value: |
+    {1930BBEB-7805-471A-A3BE-4858AC7CF696}
+    {66EE465A-3434-455E-88C4-BC5D987C75EC}
 Languages:
 - Language: en
   Versions:
@@ -10,7 +19,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20230419T015654Z
+      Value: 20230421T014252Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -21,11 +30,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "08c5017a-cb2b-43f5-bd2e-255418d4d02e"
+      Value: "a739075c-321e-4f55-9943-01adebfde43d"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230419T015654Z
+      Value: 20230421T014358Z
