--- a/src/code/Project/Pasantes.Website/Pasantes.Website.csproj
+++ b/src/code/Project/Pasantes.Website/Pasantes.Website.csproj
@@ -668,6 +668,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\main.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -677,6 +678,9 @@
     <Compile Include="IOC\RegisterDependencies.cs" />
     <Compile Include="Models\GlassMapper\BaseItem.cs" />
     <Compile Include="Models\GlassMapper\IBaseItem.cs" />
+    <Compile Include="Models\Banner.cs" />
+    <Compile Include="Models\MainMenuContainer.cs" />
+    <Compile Include="Models\MainMenu.cs" />
     <Compile Include="Models\TitleAndText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\GlassMapper\DataSourceServices.cs" />
@@ -703,6 +707,8 @@
     <Content Include="Views\Sample.cshtml" />
     <Content Include="Views\TitleAndText.cshtml" />
     <Content Include="Views\TitleAndTextGlassMapper.cshtml" />
+    <Content Include="Views\MainMenu.cshtml" />
+    <Content Include="Views\Banner.cshtml" />
     <None Include="Views\web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
