--- a/src/serialization/templates/User Defined/Components/Main Menu Container/__Standard Values.yml
+++ b/src/serialization/templates/User Defined/Components/Main Menu Container/__Standard Values.yml
@@ -1,8 +1,12 @@
 ﻿---
-ID: "edac90d2-36ea-4976-bbc5-8d7a5ccd92c1"
-Parent: "86b24852-b71b-449e-b06d-5df9105032b0"
-Template: "f0f61252-dbcc-4fd9-91e4-44ad4a064165"
-Path: /sitecore/content/Pasantes/Data/Student
+ID: "ca647d12-7ff2-4e54-ab63-bcaa6fdfbf04"
+Parent: "b32de6fc-2116-4278-9570-ede1fb629b35"
+Template: "b32de6fc-2116-4278-9570-ede1fb629b35"
+Path: /sitecore/templates/User Defined/Components/Main Menu Container/__Standard Values
+SharedFields:
+- ID: "1172f251-dad4-4efb-a329-0c63500e4f1e"
+  Hint: __Masters
+  Value: "{3F5A16EC-3C44-40B9-A066-D0C806F3CB8A}"
 Languages:
 - Language: en
   Versions:
@@ -10,7 +14,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20230419T014817Z
+      Value: 20230424T205747Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -21,11 +25,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "8f5d3e7f-0355-45db-b6e4-5c7d79d69020"
+      Value: "ce6ca77a-aa7d-4981-946f-f3e4afd8b6ee"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230424T203651Z
+      Value: 20230424T205758Z
