--- a/src/serialization/content/Pasantes/Home.yml
+++ b/src/serialization/content/Pasantes/Home.yml
@@ -8,6 +8,34 @@ Languages:
   Versions:
   - Version: 1
     Fields:
+    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
+      Hint: __Lock
+      Value: <r />
+    - ID: "04bf00db-f5fb-41f7-8ab7-22408372a981"
+      Hint: __Final Renderings
+      Value: |
+        <r xmlns:p="p" xmlns:s="s"
+          p:p="1">
+          <d
+            id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+            <r
+              uid="{56C42640-C84D-416C-A294-6B92DF5C8C44}"
+              p:after="r[@uid='{0F7FC06D-768A-49DE-9204-068E14F9A9B6}']"
+              s:id="{490B1646-324A-4EFA-8647-9776B4C5B40A}"
+              s:par="CacheClearingBehavior=Clear on publish"
+              s:ph="main" />
+            <r
+              uid="{542A8FD5-10EE-4213-8FFE-33353B048B69}"
+              p:after="r[@uid='{56C42640-C84D-416C-A294-6B92DF5C8C44}']"
+              s:id="{BC06EF61-2186-4F7B-937A-4CB0F4CA361D}"
+              s:ph="main" />
+            <r
+              uid="{FDD85EC3-6D41-4F1E-A563-B04341A36096}"
+              p:after="*[1=2]"
+              s:id="{127961D3-6701-4BFA-A222-2E8049961E92}"
+              s:ph="main" />
+          </d>
+        </r>
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20230421T014407Z
@@ -16,11 +44,11 @@ Languages:
       Value: Home
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "84e72468-939b-41bb-935b-474bef4f2d63"
+      Value: "e20fc217-78c6-4019-8ad4-701144109d3c"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230421T014407Z
+      Value: 20230509T022014Z
