--- a/src/code/Project/Pasantes.Website/Pasantes.Website.csproj
+++ b/src/code/Project/Pasantes.Website/Pasantes.Website.csproj
@@ -676,6 +676,8 @@
     <Compile Include="App_Start\GlassMapperScCustom.cs" />
     <Compile Include="Controller\DefaultController.cs" />
     <Compile Include="IOC\RegisterDependencies.cs" />
+    <Compile Include="Models\ImageList.cs" />
+    <Compile Include="Models\ImageInList.cs" />
     <Compile Include="Models\GlassMapper\BaseItem.cs" />
     <Compile Include="Models\GlassMapper\IBaseItem.cs" />
     <Compile Include="Models\Banner.cs" />
@@ -712,6 +714,7 @@
     <Content Include="Views\Design\TwoColumn.cshtml" />
     <Content Include="Views\Design\ThreeColumn.cshtml" />
     <Content Include="Views\Design\FourColumn.cshtml" />
+    <Content Include="Views\ImageList.cshtml" />
     <None Include="Views\web.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
