--- a/src/serialization/placeholders/User Defined/3 column/three-column-right.yml
+++ b/src/serialization/placeholders/User Defined/3 column/three-column-right.yml
@@ -10,6 +10,9 @@ SharedFields:
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: 150
+- ID: "e391b526-d0c5-439d-803e-17512eae6222"
+  Hint: Allowed Controls
+  Value: "{2C51D154-8378-457C-AA52-212C9F1195D3}"
 Languages:
 - Language: en
   Versions:
@@ -28,11 +31,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "2d69f2d2-553e-4779-a2d9-40521f65235a"
+      Value: "30273e23-cc04-4208-ba75-f4bf23b8e981"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230509T005731Z
+      Value: 20230511T234642Z
