API/Endpoint + Simple Search. Does not include items

--- a/src/code/Project/Pasantes.Website/App_Config/Include/z.Pasantes/Pasantes.Website.config
+++ b/src/code/Project/Pasantes.Website/App_Config/Include/z.Pasantes/Pasantes.Website.config
@@ -4,5 +4,11 @@
 		<services>
 			<configurator type="Pasantes.Website.IOC.RegisterDependencies, Pasantes.Website" />
 		</services>
+		<pipelines>
+			<initialize>
+				<processor type="Pasantes.Website.Infrastructure.RegisterServicesApiRoutes, Pasantes.Website"
+				           patch:before="processor[@type='Sitecore.Mvc.Pipelines.Loader.InitializeRoutes, Sitecore.Mvc']" />
+			</initialize>
+		</pipelines>
 	</sitecore>
 </configuration>
