--- a/src/code/Project/Pasantes.Website/packages.config
+++ b/src/code/Project/Pasantes.Website/packages.config
@@ -188,6 +188,9 @@
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Trace" version="2.1.0" targetFramework="net48" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net48" />
+  <package id="Sitecore.ContentSearch" version="10.3.0" targetFramework="net48" />
+  <package id="Sitecore.ContentSearch.Data" version="10.3.0" targetFramework="net48" />
+  <package id="Sitecore.ContentSearch.Linq" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Data.ResourceItems.Abstractions" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Data.ResourceItems.ProtobufNet" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Framework.Conditions" version="6.0.0" targetFramework="net48" />
@@ -200,6 +203,8 @@
   <package id="Sitecore.Mvc" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Nexus.Consumption" version="1.5.0" targetFramework="net48" />
   <package id="Sitecore.Nexus.Licensing" version="2.0.6" targetFramework="net48" />
+  <package id="Sitecore.Services.Core" version="10.3.0" targetFramework="net48" />
+  <package id="Sitecore.Services.Infrastructure" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Web" version="10.3.0" targetFramework="net48" />
   <package id="Sitecore.Zip" version="10.1.2" targetFramework="net48" />
   <package id="SolrNet" version="1.0.19" targetFramework="net48" />
